<resources>
    <string name="app_name">BLX</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name </string>
    <string name="edition">Edition</string>
    <string name="cost">Cost</string>
    <string name="Submit">Submit</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phoneno">Phone number</string>
    <string name="phoneno2">Phone number 2</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="prompt_password">Password</string>
    <string name="password">Password</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="postbook">POST BOOK</string>
    <string name="viewbook">VIEW BOOK</string>
    <string name="message">COMMENTS</string>
    <string name="viewfeedback">VIEW FEEDBACK</string>
    <string name="postfeedback">POST FEEDBACK</string>
    <string name="post_message">COMMENTS</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="addbooks">Add Book</string>
    <string name="adduser"> Add User</string>
</resources>
