<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLength="25"/>




    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:maxLength="25"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:maxLength="25"
        android:inputType="textPassword"

         />

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/phoneno"
        android:maxLength="14"
        android:inputType="phone"
        />

    <EditText
        android:id="@+id/phoneno2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/phoneno2"
        android:maxLength="14"
        android:inputType="phone"

        />

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/address"
        android:maxLength="30"
        android:inputType="textPostalAddress"

        />
    <EditText
        android:id="@+id/city"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:maxLength="25"
        android:inputType="text"
        android:hint="@string/city"
        />
    <EditText
        android:id="@+id/state"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/state"
        android:maxLength="25"
        android:inputType="text"
        />




    <!-- Login Button -->

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="#ea4c88"
        android:padding="@dimen/padding_medium"
        android:text="@string/btn_register"
        />

        <Button
          android:id="@+id/btnLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dip"
          android:background="#ea4c88"
          android:padding="@dimen/padding_medium"
          android:text="@string/btn_link_to_login"
          android:layout_marginBottom="@dimen/padding_medium"
          />

    </LinearLayout>
</ScrollView>



