<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
    android:id="@+id/book_name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/book_name"
    android:inputType="text" />

    <EditText
        android:id="@+id/author_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtion"
        android:inputType="text" />
    <EditText
        android:id="@+id/cost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCapturePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a Picture"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <Button
        android:id="@+id/submit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Submit"
        android:textStyle="bold" />

</LinearLayout>